<?xml version="1.0"?>
<package format="3">
  <name>ypspur_ros_bridge</name>
  <version>1.0.0</version>
  <description>The ypspur_ros_bridge package</description>
  <maintainer email="GRoadPG@gmail.com">RyodoTanaka</maintainer>
  <author>Ryodo Tanaka</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>